Update contact email and phone number

--- a/index/index.html
+++ b/index/index.html
@@ -110,8 +110,8 @@
         </ul>
        </nav>
 
-       <a href="mailto:ps7667sagar@gmail.com">Email</a>
-       <a href="tel:7667256926">Call Us</a>
+       <a href="mail to:hacker@gmail.com">Email</a>
+       <a href="tel:8888888888">Call Us</a>
 
 
 
