--- a/lecture 8-Forms/one.html
+++ b/lecture 8-Forms/one.html
@@ -52,6 +52,10 @@
         <input type="file" id="file1">
 
         <br><br>
+        <label for ="url1">Enter URL:-</label>
+        <input type="url" id="url1">
+
+        <br><br>
         <button>Submit</button>
 
         </fieldset>
